--- a/index.html
+++ b/index.html
@@ -120,7 +120,7 @@
 	<!-- Footer -->
 	<footer id="footer">
 		<ul class="icons">
-			<li><a href="https://pouet.chapril.org/@nathanaelmartel" target="_blank" title="Mastodon" rel="me"><i class="icon fa-mastodon"></i></a></li>
+			<li><a href="https://framapiaf.org/@simplementNat" target="_blank" title="Mastodon" rel="me"><i class="icon fa-mastodon"></i></a></li>
 			<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog" rel="me"><span class="icon fa-rss"></span></a></li>
 			<li><a href="https://github.com/simplementNat" target="_blank" title="github" rel="me"><span class="icon fa-github"></span></a></li>
 			<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin" rel="me"><span class="icon fa-linkedin"></span></a></li>
