--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 	<header id="header">
 		<div class="content">
 			<h1><a href="#">Nathanaël Martel</a></h1>
-			<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Opquast : Maîtrise de la qualité en projet Web">expert qualité web
+			<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> <a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank" title="Certification Opquast : Maîtrise de la qualité en projet Web">expert qualité web
 				</a>/<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
 			<ul class="actions">
 				<li><a href="#two" class="button icon fa-chevron-down scrolly">En savoir plus</a></li>
@@ -76,7 +76,7 @@
 					<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure. Au fil du temps je me suis
 						spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utiles, ergonomiques et accessibles.</p>
 					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
-					<p>Je suis certifié expert par Opquast : <a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank">«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
+					<p>Je suis certifié expert par Opquast : <a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank">«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 				</div>
 			</section>
 			<section class="spotlight">
@@ -109,7 +109,7 @@
 						<h2><a href="https://nathanaelmartel.net/" itemprop="url"><span itemprop="name">Nathanaël Martel</span></a></h2>
 						<p>Vous pouvez me contacter par téléphone : <a class="tel" itemprop="telephone" href="tel:+33781948086">0781948086</a> <br> ou encore mieux par mail : <a href="mailto:nat@nathanaelmartel.net" class="mail"><span
 									itemprop="email">nat@nathanaelmartel.net</span></a></p>
-						<p><a href="https://certificates.opquast.com/certificate/QY5WTB/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="images/issuer_QY5WTB.svg" alt="Badge Expert par Opquast"
+						<p><a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank" title="Certification Expert Opquast : Maîtrise de la qualité en projet Web"><img src="images/issuer_QY5WTB.svg" alt="Badge Expert par Opquast"
 									width="200"></a></p>
 					</div>
 				</div>
