--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
 				<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 				<div class="content">
 					<h3>Créateur de sites web</h3>
-					<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure. Au fil du temps je me suis
-						spécialisé dans la partie «front-end», directement en contact de l'utilisateur dans le but de concevoir des interfaces utiles, ergonomiques et accessibles.</p>
-					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, WordPress, Symfony ou encore piwik.</p>
+					<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure.</p>
+					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, Symfony ou encore matomo.</p>
 					<p>Je suis certifié expert par Opquast : <a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank">«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 				</div>
 			</section>
@@ -85,14 +84,14 @@
 					<h3>Interdépendant et Mobile</h3>
 					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="https://www.ledrakkar-coworking.fr/" target="_blank">Le
 							Drakkar</a> ou <a href="https://lavoulte-coworking.net/" target="_blank">à la Voulte sur Rhône</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
-					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a>.</p>
+					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a> donc j'assure la coprésidence.</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 				<div class="content">
 					<h3>Logiciel libre</h3>
-					<p>J'utilise exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais
+					<p>J'utilise quasiment exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais
 						trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
 					<p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
 				</div>
