--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@
 			<section class="spotlight">
 				<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 				<div class="content">
-					<h3>Logiciel libre</h3>
+					<h3>Logiciel libre et Clavier bépo</h3>
 					<p>J'utilise quasiment exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais
 						trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
-					<p>Pour vos sites web, j'utilise des logiciels libres : WordPress et Symfony dont la réputation n'est plus à faire.</p>
+					<p>Pour vos sites web et application, j'utilise des logiciels libres : Symfony dont la réputation n'est plus à faire.</p>
+					<p>Je suis bépoète, j'utilise un clavier <a href="https://bepo.fr/" target="_blank">bépo</a>, idéal pour écrire en français.</p>
 				</div>
 			</section>
 		</div>
