--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
 				<div class="image"><img src="images/simplement-web.jpg" alt="" /></div>
 				<div class="content">
 					<h3>Créateur de sites web</h3>
-					<p>Depuis plus de 10 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure.</p>
+					<p>Depuis plus de 15 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure.</p>
 					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, Symfony ou encore matomo.</p>
 					<p>Je suis certifié expert par Opquast : <a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank">«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 				</div>
@@ -82,18 +82,18 @@
 				<div class="image"><img src="images/oiseaux.jpg" alt="" /></div>
 				<div class="content">
 					<h3>Interdépendant et Mobile</h3>
-					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="https://www.ledrakkar-coworking.fr/" target="_blank">Le
-							Drakkar</a> ou <a href="https://lavoulte-coworking.net/" target="_blank">à la Voulte sur Rhône</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
+					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="http://www.multimedialavoulte.com/libre-service/" target="_blank">à la Voulte sur Rhône</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
 					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a> donc j'assure la coprésidence.</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 				<div class="content">
-					<h3>Logiciel libre et Clavier bépo</h3>
+					<h3>Logiciel libre / Internet neutre / Clavier bépo</h3>
 					<p>J'utilise quasiment exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais
-						trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres…</p>
+						trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres… je suis d’ailleurs membre de l’<a href="http://www.april.org/" targer="_blank"></a>April</p>
 					<p>Pour vos sites web et application, j'utilise des logiciels libres : Symfony dont la réputation n'est plus à faire.</p>
+					<p>Je suis adhérent actif de mon FAI : <a href="https://www.rezine.org/" target="_blank">Rézine</a> est un FAI local, à prix juste, contrôlé par ses membres, neutre et émancipateur</p>
 					<p>Je suis bépoète, j'utilise un clavier <a href="https://bepo.fr/" target="_blank">bépo</a>, idéal pour écrire en français.</p>
 				</div>
 			</section>
@@ -121,7 +121,6 @@
 	<footer id="footer">
 		<ul class="icons">
 			<li><a href="https://framapiaf.org/@simplementNat" target="_blank" title="Mastodon" rel="me"><i class="icon fa-mastodon"></i></a></li>
-			<li><a href="http://nat.fam-martel.eu/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank" title="blog" rel="me"><span class="icon fa-rss"></span></a></li>
 			<li><a href="https://github.com/simplementNat" target="_blank" title="github" rel="me"><span class="icon fa-github"></span></a></li>
 			<li><a href="https://fr.linkedin.com/pub/nathana%C3%ABl-martel/53/997/152" target="_blank" title="linkedin" rel="me"><span class="icon fa-linkedin"></span></a></li>
 			<li><a href="tel:+33781948086" target="_blank" title="téléphone" rel="me"><span class="icon fa-phone"></span></a></li>
