éducation populaire + ergol

--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 		<div class="content">
 			<h1><a href="#">Nathanaël Martel</a></h1>
 			<p>père / jardinier / randonneur /<br> codeur / créateur de sites web /<br> <a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank" title="Certification Opquast : Maîtrise de la qualité en projet Web">expert qualité web
-				</a>/<br> professeur / coworkeur /<br> liberté / simplicité / partage … </p>
+				</a>/<br> mentor / coworkeur /<br> liberté / simplicité / coopération / partage … </p>
 			<ul class="actions">
 				<li><a href="#two" class="button icon fa-chevron-down scrolly">En savoir plus</a></li>
 			</ul>
@@ -74,7 +74,7 @@
 				<div class="content">
 					<h3>Créateur de sites web</h3>
 					<p>Depuis plus de 15 ans <a href="http://www.simplement-web.com/?pk_campaign=nathanaelmartel.net&pk_kwd=nathanaelmartel.net" target="_blank">je fais des sites web</a> ou des applications web de gestion sur mesure.</p>
-					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, Symfony ou encore matomo.</p>
+					<p>Je travaille avec des solutions logiciel libres : PHP, MySQL, sass, git, Symfony ou encore YesWiki.</p>
 					<p>Je suis certifié expert par Opquast : <a href="https://directory.opquast.com/fr/certificat/M4DUIV/" target="_blank">«&nbsp;Maîtrise de la qualité en projet Web&nbsp;»</a></p>
 				</div>
 			</section>
@@ -83,18 +83,18 @@
 				<div class="content">
 					<h3>Interdépendant et Mobile</h3>
 					<p>Enfermé dans un bureau en haut d'une tour parisienne ? Quelle drôle d'idée, je préfère rencontrer des gens extra-ordinaires dans les espaces de coworking formidables : <a href="http://www.multimedialavoulte.com/libre-service/" target="_blank">à la Voulte sur Rhône</a>. Ou sinon profiter du calme d'un jardin à la campagne, dérangé par le seul passage des oiseaux.</p>
-					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">mozeika</a> donc j'assure la coprésidence.</p>
+					<p>Je suis membre de la coopérative d'activités et d'entrepreneurs <a href="https://www.mozeika.fr/" target="_blank">Avec Mozeika</a> donc j'assure la coprésidence.</p>
 				</div>
 			</section>
 			<section class="spotlight">
 				<div class="image"><img src="images/logiciel-libre.jpg" alt="" /></div>
 				<div class="content">
-					<h3>Logiciel libre / Internet neutre / Clavier bépo</h3>
+					<h3>Logiciel libre / Internet neutre / Clavier ergo-l</h3>
 					<p>J'utilise quasiment exclusivement des logiciels libres, non pas pour l'aspect économique qu'ils représentent mais bien pour leurs capacités à me donner le contrôle de mon ordinateur ainsi que la possibilité que j'ai de les partager. Je ne saurais
 						trop vous conseiller d'utiliser Firefox, Gimp, Gnu/Linux et les autres… je suis d’ailleurs membre de l’<a href="http://www.april.org/" targer="_blank"></a>April</p>
-					<p>Pour vos sites web et application, j'utilise des logiciels libres : Symfony dont la réputation n'est plus à faire.</p>
-					<p>Je suis adhérent actif de mon FAI : <a href="https://www.rezine.org/" target="_blank">Rézine</a> est un FAI local, à prix juste, contrôlé par ses membres, neutre et émancipateur</p>
-					<p>Je suis bépoète, j'utilise un clavier <a href="https://bepo.fr/" target="_blank">bépo</a>, idéal pour écrire en français.</p>
+					<p>Je suis adhérent et bénévole de mon FAI : <a href="https://www.rezine.org/" target="_blank">Rézine</a> est un FAI local, à prix juste, contrôlé par ses membres, neutre et émancipateur</p>
+					<p>J'utilise un clavier Ferris Sweep avec une disposition <a href="https://ergol.org/" target="_blank">ergo-l</a>, dont l’ergonomie est idéal pour écrire en français, en anglais ou encore pour faire du code.</p>
+                    <p>Je fais également de l’éducation populaire pour sensibiliser et aider à se libérer des GAFAM et aller a des solutions libres.</p>
 				</div>
 			</section>
 		</div>
